[package]
name = "takparse"
version = "0.5.5"
edition = "2021"
license = "MIT"
description = "Parse, manipulate, and stringify common Tak board game formats"
keywords = ["tak", "game", "parse", "display"]
repository = "https://github.com/alion02/takparse"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
